--- a/radioshakespeare.html
+++ b/radioshakespeare.html
@@ -58,9 +58,11 @@
             letter-spacing: 1px;
         }
 
-        audio {
+        iframe {
             width: 100%;
+            height: 120px;
             margin-top: 20px;
+            border: none;
         }
     </style>
 </head>
@@ -73,14 +75,8 @@
         <div class="speaker-grill"></div>
         <div class="speaker-grill"></div>
 
-        <audio controls id="audioPlayer">
-            <source src="https://www.mixcloud.com/innovazionegrafica/il-tuo-cuore/" type="audio/mpeg">
-            Your browser does not support the audio element.
-        </audio>
+        <iframe src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2Finnovazionegrafica%2Fil-tuo-cuore%2F" frameborder="0"></iframe>
     </div>
 
-    <script>
-        const audioPlayer = document.getElementById('audioPlayer');
-    </script>
 </body>
 </html>
