--- a/radioshakespeare.html
+++ b/radioshakespeare.html
@@ -30,6 +30,18 @@
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
         }
 
+        .welcome-message {
+            font-size: 1.2em;
+            margin-bottom: 40px;
+            max-width: 800px;
+            text-align: left;
+            line-height: 1.6;
+            background-color: rgba(33, 33, 33, 0.8); /* Semi-transparent black background */
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+        }
+
         .radio-container {
             background: linear-gradient(to bottom, #43a047, #2e7d32); /* Green gradient */
             border-radius: 20px;
@@ -69,6 +81,13 @@
 <body>
 
     <h1>Radio Shakespeare</h1>
+
+    <div class="welcome-message">
+        Benvenuti su Radio Shakespeare, dove il romantico eterno incontra il digitale moderno. 🎭📻<br><br>
+        Se Shakespeare fosse un giovane del nostro tempo, lo immaginiamo come un innovatore audace, un poeta tecnologico che trasformerebbe le sue opere e i suoi versi in musica e podcast, collegando cuori e menti attraverso la magia delle frequenze digitali. Radio Shakespeare nasce con questa visione: essere il ponte tra passato e presente, dove i monologhi di Amleto diventano playlist emozionanti, e il romanticismo di Romeo e Giulietta si trasforma in storie che parlano a tutti.<br><br>
+        Con ogni episodio, celebriamo l'eredità di Shakespeare e lo immaginiamo come un ventenne che invierebbe brani musicali e poesie agli angoli più remoti del globo. La sua penna, oggi, sarebbe un microfono; il suo palcoscenico, una radio aperta al mondo intero.<br><br>
+        Sintonizzati, il viaggio sta per iniziare.
+    </div>
 
     <div class="radio-container">
         <div class="display">Il tuo cuore non è mica un ladro</div>
