--- a/radioshakespeare.html
+++ b/radioshakespeare.html
@@ -31,13 +31,13 @@
         }
 
         .welcome-message {
-            font-size: 1.2em;
-            margin-bottom: 40px;
+            font-size: 1em;
+            margin-bottom: 20px;
             max-width: 800px;
             text-align: left;
             line-height: 1.6;
             background-color: rgba(33, 33, 33, 0.8); /* Semi-transparent black background */
-            padding: 20px;
+            padding: 10px;
             border-radius: 10px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
         }
@@ -45,44 +45,13 @@
         .radio-container {
             background: linear-gradient(to bottom, #43a047, #2e7d32); /* Green gradient */
             border-radius: 20px;
-            padding: 30px;
+            padding: 20px;
             width: 350px;
             box-shadow: 0 0 30px rgba(0, 0, 0, 0.6);
             border: 2px solid #66bb6a; /* Lighter green border */
             display: flex;
             flex-direction: column;
             align-items: center;
-        }
-
-        .display {
-            background-color: #212121;
-            color: #fff;
-            padding: 12px;
-            margin: 15px 0;
-            border-radius: 8px;
-            font-size: 1.3em;
-            font-family: sans-serif;
-            letter-spacing: 1px;
-            text-align: center;
-        }
-
-        .audio-controls {
-            margin-top: 20px;
-        }
-
-        .audio-controls button {
-            background-color: #ff7043;
-            color: #fff;
-            border: none;
-            padding: 10px 20px;
-            margin: 5px;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 1em;
-        }
-
-        .audio-controls button:hover {
-            background-color: #e64a19;
         }
 
         .audio-list {
@@ -115,7 +84,6 @@
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
-            display: none;
         }
 
         .presentation img {
@@ -146,11 +114,6 @@
     </div>
 
     <div class="radio-container">
-        <div class="display">Il tuo cuore non è mica un ladro</div>
-        <div class="audio-controls">
-            <button onclick="playAll()">Play All</button>
-        </div>
-        
         <div class="audio-list">
             <button onclick="selectTrack(0)">Il tuo cuore</button>
             <button onclick="selectTrack(1)">Another Track</button>
@@ -187,17 +150,6 @@
             audioPlayer.src = url;
         }
 
-        function playAll() {
-            if (currentTrack < tracks.length) {
-                playAudio(tracks[currentTrack].url);
-                showPresentation(currentTrack);
-                currentTrack++;
-                setTimeout(playAll, 300000); // Assuming each track is 5 minutes long (300000 ms)
-            } else {
-                currentTrack = 0; // Reset to the first track
-            }
-        }
-
         function showPresentation(index) {
             const presentation = document.getElementById('presentation');
             const track = tracks[index];
@@ -210,6 +162,11 @@
             playAudio(tracks[index].url);
             showPresentation(index);
         }
+
+        // Automatically display the first track on page load
+        window.onload = function() {
+            selectTrack(0);
+        };
     </script>
 
 </body>
