--- a/radioshakespeare.html
+++ b/radioshakespeare.html
@@ -68,6 +68,30 @@
             position: absolute;
             top: 0;
             left: 0;
+            display: none;
+        }
+
+        .play-button {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: rgba(0, 0, 0, 0.5);
+            color: white;
+            border: none;
+            border-radius: 50%;
+            cursor: pointer;
+            font-size: 1.5em;
+            padding: 10px 20px;
+        }
+
+        .song-description {
+            margin-top: 20px;
+            background-color: rgba(33, 33, 33, 0.8);
+            padding: 10px;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+            display: none;
         }
     </style>
 </head>
@@ -76,17 +100,26 @@
     <h1>Radio Shakespeare</h1>
 
     <div class="welcome-message">
-       
         Se Shakespeare fosse un giovane del nostro tempo, lo immaginiamo come un innovatore audace, un poeta tecnologico che trasformerebbe le sue opere e i suoi versi in musica e podcast, collegando cuori e menti attraverso la magia delle frequenze digitali. Radio Shakespeare nasce con questa visione: essere il ponte tra passato e presente
     </div>
 
     <div class="radio-container">
         <img src="https://example.com/cover1.jpg" alt="Il tuo cuore" class="song-cover" id="song-cover">
         <iframe id="audio-player" class="audio-player" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2Finnovazionegrafica%2Fil-tuo-cuore%2F"></iframe>
+        <button class="play-button" onclick="playSong()">▶</button>
+        <div id="song-description" class="song-description">
+            <p>Descrizione della canzone: "Il tuo cuore" è una presentazione coinvolgente su...</p>
+        </div>
     </div>
 
     <script>
-        // No additional scripts needed
+        function playSong() {
+            const audioPlayer = document.getElementById('audio-player');
+            const description = document.getElementById('song-description');
+            audioPlayer.style.display = 'block';
+            description.style.display = 'block';
+            document.querySelector('.play-button').style.display = 'none';
+        }
     </script>
 
 </body>
