--- a/radioshakespeare.html
+++ b/radioshakespeare.html
@@ -20,6 +20,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            transition: background-color 0.5s ease;
         }
 
         h1 {
@@ -61,37 +62,16 @@
             display: block;
         }
 
-        .audio-player {
+        .iframe-container {
             width: 100%;
             height: 120px;
-            border: none;
-            position: absolute;
-            top: 0;
-            left: 0;
-            display: none;
+            position: relative;
         }
 
-        .play-button {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background: rgba(0, 0, 0, 0.5);
-            color: white;
+        .audio-player {
+            width: 100%;
+            height: 100%;
             border: none;
-            border-radius: 50%;
-            cursor: pointer;
-            font-size: 1.5em;
-            padding: 10px 20px;
-        }
-
-        .song-description {
-            margin-top: 20px;
-            background-color: rgba(33, 33, 33, 0.8);
-            padding: 10px;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
-            display: none;
         }
     </style>
 </head>
@@ -100,26 +80,23 @@
     <h1>Radio Shakespeare</h1>
 
     <div class="welcome-message">
-        Se Shakespeare fosse un giovane del nostro tempo, lo immaginiamo come un innovatore audace, un poeta tecnologico che trasformerebbe le sue opere e i suoi versi in musica e podcast, collegando cuori e menti attraverso la magia delle frequenze digitali. Radio Shakespeare nasce con questa visione: essere il ponte tra passato e presente
+        Se Shakespeare fosse un giovane del nostro tempo, lo immaginiamo come un innovatore audace, un poeta tecnologico che trasformerebbe le sue opere e i suoi versi in musica e podcast, collegando cuori e menti attraverso la magia delle frequenze digitali. Radio Shakespeare nasce con questa visione: essere il ponte tra passato e presente<br><br>
+        <br><br>
+        Sintonizzati, il viaggio sta per iniziare.
     </div>
 
-    <div class="radio-container">
+    <div id="mixcloudEmbedContainer" class="radio-container" data-track="Il tuo cuore" data-artist="Innovazione Grafica">
         <img src="https://example.com/cover1.jpg" alt="Il tuo cuore" class="song-cover" id="song-cover">
-        <iframe id="audio-player" class="audio-player" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2Finnovazionegrafica%2Fil-tuo-cuore%2F"></iframe>
-        <button class="play-button" onclick="playSong()">▶</button>
-        <div id="song-description" class="song-description">
-            <p>Descrizione della canzone: "Il tuo cuore" è una presentazione coinvolgente su...</p>
+        <div class="iframe-container">
+            <iframe id="audio-player" class="audio-player" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2Finnovazionegrafica%2Fil-tuo-cuore%2F"></iframe>
         </div>
     </div>
 
     <script>
-        function playSong() {
-            const audioPlayer = document.getElementById('audio-player');
-            const description = document.getElementById('song-description');
-            audioPlayer.style.display = 'block';
-            description.style.display = 'block';
-            document.querySelector('.play-button').style.display = 'none';
-        }
+        document.getElementById('mixcloudEmbedContainer').addEventListener('click', function() {
+            document.body.style.backgroundColor = 'yellow';
+            console.log('Colore di sfondo cambiato!');
+        });
     </script>
 
 </body>
