--- a/radioshakespeare.html
+++ b/radioshakespeare.html
@@ -20,7 +20,6 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            transition: background-color 0.5s ease;
         }
 
         h1 {
@@ -62,16 +61,22 @@
             display: block;
         }
 
-        .iframe-container {
-            width: 100%;
-            height: 120px;
-            position: relative;
-        }
-
-        .audio-player {
+        /* Layer trasparente per catturare i clic */
+        #click-layer {
+            position: absolute;
+            top: 0;
+            left: 0;
             width: 100%;
             height: 100%;
-            border: none;
+            background: rgba(0, 0, 0, 0); /* Completamente trasparente */
+            z-index: 2; /* Sopra l'iframe */
+            cursor: pointer;
+        }
+
+        /* Per assicurarci che l'iframe sia sotto il layer */
+        #audio-player {
+            position: relative;
+            z-index: 1;
         }
     </style>
 </head>
@@ -80,22 +85,25 @@
     <h1>Radio Shakespeare</h1>
 
     <div class="welcome-message">
-        Se Shakespeare fosse un giovane del nostro tempo, lo immaginiamo come un innovatore audace, un poeta tecnologico che trasformerebbe le sue opere e i suoi versi in musica e podcast, collegando cuori e menti attraverso la magia delle frequenze digitali. Radio Shakespeare nasce con questa visione: essere il ponte tra passato e presente<br><br>
+        Se Shakespeare fosse un giovane del nostro tempo, lo immagineremmo come un innovatore audace, un poeta tecnologico che trasformerebbe le sue opere e i suoi versi in musica e podcast, collegando cuori e menti attraverso la magia delle frequenze digitali. Radio Shakespeare nasce con questa visione: essere il ponte tra passato e presente... <br><br>
         <br><br>
         Sintonizzati, il viaggio sta per iniziare.
     </div>
 
     <div id="mixcloudEmbedContainer" class="radio-container" data-track="Il tuo cuore" data-artist="Innovazione Grafica">
         <img src="https://example.com/cover1.jpg" alt="Il tuo cuore" class="song-cover" id="song-cover">
-        <div class="iframe-container">
-            <iframe id="audio-player" class="audio-player" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2Finnovazionegrafica%2Fil-tuo-cuore%2F"></iframe>
-        </div>
+        
+        <!-- Layer trasparente sopra l'iframe -->
+        <div id="click-layer"></div>
+        
+        <iframe id="audio-player" class="audio-player" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2Finnovazionegrafica%2Fil-tuo-cuore%2F"></iframe>
     </div>
 
     <script>
-        document.getElementById('mixcloudEmbedContainer').addEventListener('click', function() {
+        // Aggiungiamo un evento click al layer trasparente
+        document.getElementById('click-layer').addEventListener('click', function() {
             document.body.style.backgroundColor = 'yellow';
-            console.log('Colore di sfondo cambiato!');
+            console.log('Evento di clic gestito con successo!');
         });
     </script>
 
