--- a/radioshakespeare.html
+++ b/radioshakespeare.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            background: linear-gradient(to right, #1b5e20, #33691e); /* Darker green gradient */
+            background: linear-gradient(to right, #1b5e20, #33691e);
             font-family: 'Roboto Slab', serif;
             color: #fff;
             text-align: center;
@@ -26,29 +26,18 @@
             font-family: 'Playfair Display', serif;
             font-size: 4em;
             margin-bottom: 30px;
-            color: #ff7043; /* A more muted red-orange */
+            color: #ff7043;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
         }
 
-        .welcome-message {
-            font-size: 1em;
-            margin-bottom: 20px;
-            max-width: 800px;
-            text-align: left;
-            line-height: 1.6;
-            background-color: rgba(33, 33, 33, 0.8); /* Semi-transparent black background */
-            padding: 10px;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
-        }
-
         .radio-container {
-            background: linear-gradient(to bottom, #43a047, #2e7d32); /* Green gradient */
+            background: transparent; /* Rendi lo sfondo trasparente */
             border-radius: 20px;
-            padding: 20px;
-            width: 350px;
-            box-shadow: 0 0 30px rgba(0, 0, 0, 0.6);
-            border: 2px solid #66bb6a; /* Lighter green border */
+            padding: 0; /* Rimuovi il padding */
+            width: 100%; /* Aumenta la larghezza */
+            max-width: 800px; /* Imposta una larghezza massima */
+            box-shadow: none; /* Rimuovi l'ombra */
+            border: none; /* Rimuovi il bordo */
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -57,8 +46,11 @@
 
         .song-cover {
             width: 100%;
+            max-width: 800px;
             border-radius: 10px;
-            display: block;
+            display: none; /* Nasconde l'immagine inizialmente */
+            transition: opacity 0.5s ease-in-out; /* Aggiungi una transizione */
+            opacity: 0; /* Inizia con opacità 0 */
         }
 
         /* Layer trasparente per catturare i clic */
@@ -68,8 +60,8 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0); /* Completamente trasparente */
-            z-index: 2; /* Sopra l'iframe */
+            background: rgba(0, 0, 0, 0);
+            z-index: 2;
             cursor: pointer;
         }
 
@@ -77,6 +69,8 @@
         #audio-player {
             position: relative;
             z-index: 1;
+            width: 100%; /* Aumenta la larghezza */
+            height: 150px; /* Aumenta l'altezza */
         }
 
         #song-details {
@@ -85,11 +79,11 @@
             max-width: 800px;
             text-align: center;
             line-height: 1.6;
-            background-color: rgba(33, 33, 33, 0.8); /* Semi-transparent black background */
+            background-color: rgba(33, 33, 33, 0.8);
             padding: 10px;
             border-radius: 10px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
-            display: none; /* Hidden by default */
+            display: none;
         }
     </style>
 </head>
@@ -98,13 +92,13 @@
     <h1>Radio Shakespeare</h1>
 
     <div class="welcome-message">
-        Se Shakespeare fosse un giovane del nostro tempo, lo immagineremmo come un innovatore audace, un poeta tecnologico che trasformerebbe le sue opere e i suoi versi in musica e podcast, collegando cuori e menti attraverso la magia delle frequenze digitali. Radio Shakespeare nasce con questa visione: essere il ponte tra passato e presente... <br><br>
+        Se Shakespeare fosse un giovane del nostro tempo, lo immagineremmo come un innovatore audace, un poeta tecnologico che trasformerebbe le sue opere e i suoi versi in musica e podcast, collaborando con artisti e musicisti di tutto il mondo.
         <br><br>
         Sintonizzati, il viaggio sta per iniziare.
     </div>
 
     <div id="mixcloudEmbedContainer" class="radio-container" data-track="Il tuo cuore" data-artist="Innovazione Grafica">
-        <img src="https://example.com/cover1.jpg" alt="Il tuo cuore" class="song-cover" id="song-cover">
+        <img src="https://via.placeholder.com/350x150" alt="Immagine di esempio" class="song-cover" id="song-cover">
         
         <!-- Layer trasparente sopra l'iframe -->
         <div id="click-layer"></div>
@@ -138,6 +132,18 @@
                 document.getElementById('song-title').innerText = track;
                 document.getElementById('song-artist').innerText = artist;
                 document.getElementById('song-details').style.display = 'block';
+
+                // Mostra l'immagine
+                var songCover = document.getElementById('song-cover');
+                if (songCover) {
+                    songCover.style.display = 'block'; // Cambia il display da 'none' a 'block'
+                    setTimeout(function() {
+                        songCover.style.opacity = '1'; // Gradualmente rende visibile l'immagine
+                    }, 10); // Aggiungi un piccolo ritardo per attivare la transizione
+                    console.log('Immagine visualizzata con successo!');
+                } else {
+                    console.log('Elemento immagine non trovato!');
+                }
             });
         };
     </script>
