--- a/radioshakespeare.html
+++ b/radioshakespeare.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Radio Shakespeare</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <title>Radio Shakespeare 🌹</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
     <style>
+        /* Stile romantico maschile */
         body {
-            background: linear-gradient(to right, #1b5e20, #33691e);
+            background: linear-gradient(to right, #2e3b55, #5c677d); /* Blu e grigio per profondità e romanticismo */
             font-family: 'Roboto Slab', serif;
-            color: #fff;
+            color: #d4af37; /* Oro elegante */
             text-align: center;
             padding: 50px;
             margin: 0;
@@ -26,129 +25,124 @@
             font-family: 'Playfair Display', serif;
             font-size: 4em;
             margin-bottom: 30px;
-            color: #ff7043;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+            color: #ffffff; /* Bianco per Radio Shakespeare */
+            text-shadow: 2px 2px 6px rgba(255, 255, 255, 0.6); /* Leggero bagliore */
         }
 
         .radio-container {
-            background: transparent; /* Rendi lo sfondo trasparente */
+            background: linear-gradient(to bottom, #2b3747, #3c4a5f); /* Toni scuri e maschili */
             border-radius: 20px;
-            padding: 0; /* Rimuovi il padding */
-            width: 100%; /* Aumenta la larghezza */
-            max-width: 800px; /* Imposta una larghezza massima */
-            box-shadow: none; /* Rimuovi l'ombra */
-            border: none; /* Rimuovi il bordo */
+            padding: 20px;
+            width: 350px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.7); /* Ombra scura elegante */
+            border: 2px solid #d4af37; /* Bordi dorati */
             display: flex;
             flex-direction: column;
             align-items: center;
             position: relative;
+            margin-bottom: 20px;
         }
 
-        .song-cover {
-            width: 100%;
-            max-width: 800px;
-            border-radius: 10px;
-            display: none; /* Nasconde l'immagine inizialmente */
-            transition: opacity 0.5s ease-in-out; /* Aggiungi una transizione */
-            opacity: 0; /* Inizia con opacità 0 */
-        }
-
-        /* Layer trasparente per catturare i clic */
         #click-layer {
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0);
+            height: 120px;
+            background: rgba(255, 255, 255, 0); /* Trasparente */
             z-index: 2;
             cursor: pointer;
         }
 
-        /* Per assicurarci che l'iframe sia sotto il layer */
-        #audio-player {
-            position: relative;
+        .audio-player {
+            width: 100%;
+            height: 120px;
+            border: none;
+            position: absolute;
+            top: 0;
+            left: 0;
             z-index: 1;
-            width: 100%; /* Aumenta la larghezza */
-            height: 150px; /* Aumenta l'altezza */
+            border-radius: 10px; /* Angoli arrotondati */
         }
 
         #song-details {
             margin-top: 20px;
             font-size: 1em;
-            max-width: 800px;
             text-align: center;
-            line-height: 1.6;
-            background-color: rgba(33, 33, 33, 0.8);
-            padding: 10px;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+            line-height: 1.8;
+            background-color: rgba(46, 59, 85, 0.9); /* Blu scuro trasparente */
+            padding: 20px;
+            border-radius: 15px;
+            display: none; /* Nascosto inizialmente */
+            max-width: 800px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.8); /* Ombra per effetto elegante */
+        }
+
+        #play-instructions {
+            margin-top: 10px;
+            font-size: 0.9em;
+            color: #d4af37; /* Oro per attenzione */
             display: none;
+        }
+
+        .song-title {
+            font-size: 1.8em;
+            color: #ffffff; /* Bianco per massimo contrasto */
+            margin-top: 40px; /* Spazio extra in basso */
+        }
+
+        a {
+            color: #f4a460; /* Color sabbia per i link */
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
 
-    <h1>Radio Shakespeare</h1>
+    <h1>Radio Shakespeare 🌹</h1>
 
-    <div class="welcome-message">
-        Se Shakespeare fosse un giovane del nostro tempo, lo immagineremmo come un innovatore audace, un poeta tecnologico che trasformerebbe le sue opere e i suoi versi in musica e podcast, collaborando con artisti e musicisti di tutto il mondo.
-        <br><br>
-        Sintonizzati, il viaggio sta per iniziare.
-    </div>
-
-    <div id="mixcloudEmbedContainer" class="radio-container" data-track="Il tuo cuore" data-artist="Innovazione Grafica">
-        <img src="https://via.placeholder.com/350x150" alt="Immagine di esempio" class="song-cover" id="song-cover">
-        
-        <!-- Layer trasparente sopra l'iframe -->
+    <div class="radio-container" id="mixcloudEmbedContainer" data-track="Il tuo cuore" data-artist="1999" data-book-link="https://example.com/libro1">
         <div id="click-layer"></div>
-        
         <iframe id="audio-player" class="audio-player" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2Finnovazionegrafica%2Fil-tuo-cuore%2F"></iframe>
     </div>
 
     <div id="song-details">
-        <h2 id="song-title"></h2>
-        <p id="song-artist"></p>
+        <p id="artist-name"></p>
+        <p><a href="#" id="book-link" target="_blank">Leggi il libro associato alla canzone</a></p>
+        <p id="play-instructions">Clicca sul lettore per avviare la musica!</p>
+        <h2 id="track-title" class="song-title"></h2>
     </div>
 
     <script>
-        // Assicuriamoci che l'iframe sia pronto
-        window.onload = function() {
-            var iframe = document.getElementById('audio-player');
-            var player = new Mixcloud.PlayerWidget(iframe);
+        const clickLayer = document.getElementById('click-layer');
+        clickLayer.addEventListener('click', function() {
+            // Cambia il colore di sfondo
+            document.body.style.backgroundColor = '#1e2d40'; /* Sfondo blu notte */
 
-            // Assegniamo l'evento click al layer trasparente
-            document.getElementById('click-layer').addEventListener('click', function() {
-                // Cambia il colore di sfondo
-                document.body.style.backgroundColor = 'yellow';
-                console.log('Evento di clic gestito con successo!');
+            // Mostra i dettagli della canzone
+            const container = document.getElementById('mixcloudEmbedContainer');
+            const track = container.dataset.track; // Titolo
+            const artist = container.dataset.artist; // Artista
+            const bookLink = container.dataset.bookLink; // Link al libro
 
-                // Avvia la riproduzione
-                player.play();
+            document.getElementById('artist-name').innerText = `Artista: ${artist}`;
+            const linkElement = document.getElementById('book-link');
+            linkElement.href = bookLink; // Imposta il link al libro
+            document.getElementById('track-title').innerText = `Titolo: ${track}`;
+            document.getElementById('song-details').style.display = 'block';
 
-                // Mostra i dettagli della canzone
-                var track = document.getElementById('mixcloudEmbedContainer').getAttribute('data-track');
-                var artist = document.getElementById('mixcloudEmbedContainer').getAttribute('data-artist');
-                document.getElementById('song-title').innerText = track;
-                document.getElementById('song-artist').innerText = artist;
-                document.getElementById('song-details').style.display = 'block';
+            // Mostra il messaggio di istruzioni
+            document.getElementById('play-instructions').style.display = 'block';
 
-                // Mostra l'immagine
-                var songCover = document.getElementById('song-cover');
-                if (songCover) {
-                    songCover.style.display = 'block'; // Cambia il display da 'none' a 'block'
-                    setTimeout(function() {
-                        songCover.style.opacity = '1'; // Gradualmente rende visibile l'immagine
-                    }, 10); // Aggiungi un piccolo ritardo per attivare la transizione
-                    console.log('Immagine visualizzata con successo!');
-                } else {
-                    console.log('Elemento immagine non trovato!');
-                }
-            });
-        };
+            // Rimuovi il layer trasparente per permettere il clic sull'iframe
+            clickLayer.style.display = 'none';
+        });
     </script>
-
-    <script src="https://widget.mixcloud.com/media/js/widgetApi.js"></script>
 
 </body>
 </html>
