--- a/radioshakespeare.html
+++ b/radioshakespeare.html
@@ -293,24 +293,44 @@
 
     <!-- Link aggiuntivo per ascoltare un'altra canzone -->
     <a class="extra-link" id="show-cartoon-link">
-        📘 Leggi il fumetto di questa canzone
+        📘 Leggi pensieri riflessioni inedite riguardo a tali tematiche racchiuse nella canzone
     </a>
 
     <!-- Carosello di immagini -->
     <div class="carousel-container" id="cartoon-carousel" style="display: none;"> <!-- Nascondi inizialmente -->
         <div class="carousel">
             <div class="carousel-slide">
-                <img src="/Users/sandisk/Downloads/ciao.png" alt="Image 1">
+                <img src="radioshakespeare/img/z.png" alt="Image 1">
             </div>
             <div class="carousel-slide">
-                <img src="/Users/sandisk/Downloads/ciaodue.png" alt="Image 2">
+                <img src="radioshakespeare/img/z1.png" alt="Image 2">
             </div>
             <div class="carousel-slide">
-                <img src="image3.jpg" alt="Image 3">
+                <img src="radioshakespeare/img/z2.png" alt="Image 3">
             </div>
             <div class="carousel-slide">
-                <img src="image4.jpg" alt="Image 4">
+                <img src="radioshakespeare/img/z9.png" alt="Image 4">
             </div>
+            <div class="carousel-slide">
+                <img src="radioshakespeare/img/z10.png" alt="Image 4">
+            </div>
+            <div class="carousel-slide">
+                <img src="radioshakespeare/img/z12.png" alt="Image 4">
+            </div>
+            <div class="carousel-slide">
+                <img src="radioshakespeare/img/z13.png" alt="Image 4">
+            </div>
+            <div class="carousel-slide">
+                <img src="radioshakespeare/img/z16.png" alt="Image 4">
+            </div>
+            <div class="carousel-slide">
+                <img src="radioshakespeare/img/z17.png" alt="Image 4">
+            </div>
+            <div class="carousel-slide">
+                <img src="radioshakespeare/img/z18.png" alt="Image 4">
+            </div>
+        
+            
         </div>
         <div class="controls">
             <button id="prevBtn">&#10094;</button>
