--- a/radioshakespeare.html
+++ b/radioshakespeare.html
@@ -300,34 +300,34 @@
     <div class="carousel-container" id="cartoon-carousel" style="display: none;"> <!-- Nascondi inizialmente -->
         <div class="carousel">
             <div class="carousel-slide">
-                <img src="/Innovazionegrafica/radioshakespeare/main/radioshakespeare/img/z.png" alt="Image 1">
+                <img src="https://github.com/Innovazionegrafica/radioshakespeare/raw/main/img/z.png" alt="Image 1">
             </div>
             <div class="carousel-slide">
-                <img src="/Innovazionegrafica/radioshakespeare/main/radioshakespeare/img/z1.png" alt="Image 2">
+                <img src="https://github.com/Innovazionegrafica/radioshakespeare/raw/main/img/z1.png" alt="Image 2">
             </div>
             <div class="carousel-slide">
-                <img src="/Innovazionegrafica/radioshakespeare/main/radioshakespeare/img/z2.png" alt="Image 3">
+                <img src="https://github.com/Innovazionegrafica/radioshakespeare/raw/main/img/z2.png" alt="Image 3">
             </div>
             <div class="carousel-slide">
-                <img src="/Innovazionegrafica/radioshakespeare/main/radioshakespeare/img/z9.png" alt="Image 4">
+                <img src="https://github.com/Innovazionegrafica/radioshakespeare/raw/main/img/z9.png" alt="Image 4">
             </div>
             <div class="carousel-slide">
-                <img src="/Innovazionegrafica/radioshakespeare/main/radioshakespeare/img/z10.png" alt="Image 4">
+                <img src="https://github.com/Innovazionegrafica/radioshakespeare/raw/main/img/z10.png" alt="Image 5">
             </div>
             <div class="carousel-slide">
-                <img src="/Innovazionegrafica/radioshakespeare/main/radioshakespeare/img/z12.png" alt="Image 4">
+                <img src="https://github.com/Innovazionegrafica/radioshakespeare/raw/main/img/z12.png" alt="Image 6">
             </div>
             <div class="carousel-slide">
-                <img src="/Innovazionegrafica/radioshakespeare/main/radioshakespeare/img/z13.png" alt="Image 4">
+                <img src="https://github.com/Innovazionegrafica/radioshakespeare/raw/main/img/z13.png" alt="Image 7">
             </div>
             <div class="carousel-slide">
-                <img src="/Innovazionegrafica/radioshakespeare/main/radioshakespeare/img/z16.png" alt="Image 4">
+                <img src="https://github.com/Innovazionegrafica/radioshakespeare/raw/main/img/z16.png" alt="Image 8">
             </div>
             <div class="carousel-slide">
-                <img src="/Innovazionegrafica/radioshakespeare/main/radioshakespeare/img/z17.png" alt="Image 4">
+                <img src="https://github.com/Innovazionegrafica/radioshakespeare/raw/main/img/z17.png" alt="Image 9">
             </div>
             <div class="carousel-slide">
-                <img src="/Innovazionegrafica/radioshakespeare/main/radioshakespeare/img/u18.jpg" alt="Image 4">
+                <img src="https://github.com/Innovazionegrafica/radioshakespeare/raw/main/img/u18.jpg" alt="Image 10">
             </div>
         </div>
         <div class="controls">
