--- a/radioshakespeare.html
+++ b/radioshakespeare.html
@@ -279,10 +279,10 @@
         <p id="artist-name">Artista: 1999</p>
         <p><a href="#" id="book-link" target="_blank">🎵 Ascolta un altro brano a sorpresa</a></p>
         <p id="play-instructions">
-            <span class="chunk">Clicca sul lettore</span> 
+            <span class="chunk">Clicca sul triangolino del lettore</span> 
             <span class="chunk">per avviare la musica,</span> 
-            <span class="chunk">posto in alto a destra</span> 
-            <span class="chunk">dell'immagine della canzone :)</span>
+            <span class="chunk">posto sotto la rosa, </span> 
+            <span class="chunk">sulla sinistra :)</span>
         </p>
         <h2 id="track-title" class="song-title">Titolo: Il tuo cuore</h2>
     </div>
