--- a/radioshakespeare.html
+++ b/radioshakespeare.html
@@ -282,7 +282,7 @@
             <span class="chunk">Clicca sul triangolino del lettore</span> 
             <span class="chunk">per avviare la musica,</span> 
             <span class="chunk">posto sotto la rosa, </span> 
-            <span class="chunk">sulla sinistra :)</span>
+            <span class="chunk">sulla sinistra del titolo della canzone :)</span>
         </p>
         <h2 id="track-title" class="song-title">Titolo: Il tuo cuore</h2>
     </div>
